--- a/styles.css
+++ b/styles.css
@@ -34,11 +34,20 @@ body{
     font-size: 40px;
     font-weight: 700;
     margin-right: 5vw;
+    border-radius: 5px;
+    padding: 5px;
 }
 
 .menu-links:hover{
     color: rgb(255, 130, 174) ;
+   animation-name: linkHover;
+   animation-duration: 0.3s;
+   animation-fill-mode: forwards;
     font-weight: 100;
+}
+@keyframes linkHover{
+    0%{background-color: none;}
+    100%{background-color: #424e62;}
 }
 
 h1{
@@ -52,7 +61,7 @@ h1{
 .bodysection{
     background-color: white;
     width: 80vw;
-    min-height: 1000px;
+    min-height: 850px;
     box-shadow: 0px 0px 500px 10px #1f1c2f;
     color: rgb(51, 51, 51);
     padding-top: 70px;
@@ -60,7 +69,7 @@ h1{
 }
 #people-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(2, minmax(250px, 1fr));
     grid-gap: 15px;
   }
 
@@ -80,8 +89,8 @@ h1{
     background-color: #152033;
     height: 100px;
     color: white;
-    padding-left: 50px;
-    width: 94%;
+   
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -95,14 +104,14 @@ h1{
 
 .github-link{
     padding-left: 15px;
-    padding-right: 15px;
+    padding-right: 8px;
 }
 .dotSpan{
     display: inline-block;
     width: 21px;
     height: 21px;
     border-radius: 17px;
-    margin-right: 5px;
+    margin-right: 10px;
 }
 
 .person-div{
@@ -286,19 +295,13 @@ input:focus{
 #profile-about-container{
 font-family: "Inter";
 padding: 10px;
+padding-left: 0px;
 }
 
-.about-header{
-  text-align: center;  
-}
 
 #profile-interests-container{
     font-family: "Inter";
     padding-bottom: 10px;
-}
-
-.interests-header{
-    text-align: center;
 }
 
 li{
@@ -323,4 +326,8 @@ li{
 #about-dot-page{
     font-family: 'Inter';
     padding: 10px;
+}
+
+a{
+    color: lightblue;
 }
